infra-k8s/argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.staging.maxto-platform.cloud
    secretName: argocd-server-tls
  rules:
  - host: argocd.staging.maxto-platform.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
